# catch2-benchmark-demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build_all.ps1  build_all.sh
benchmark/: CMakeLists.txt  lookup.cpp  map_vs_sort.cpp
scripts/: requirements.txt  setup_python.sh
src/: map_vs_hash.hpp  random_string.hpp
unittests/: CMakeLists.txt  algorithm_test.cpp  bdd_test.cpp  catch2_helper.h  exception_test.cpp  matcher_test.cpp  objects_test.cpp
